# oapi-sdk-python-compact

./: .cursorignore  .env.example  .groupedtimelineinclude  .pre-commit-config.yaml  CLAUDE.md  MIGRATE.md  README.md  justfile  pyproject.toml
.github/workflows/: tests.yml
src/lark_oapi_compact/compact/: __init__.py  pydantic_compat.py
src/lark_oapi_compact/remaintain/: README.md  README.zh.md
src/lark_oapi_compact/remaintain/extra/api/request/: request.py
src/lark_oapi_compact/remaintain/shortcut/compact/: __init__.py
src/lark_oapi_compact/remaintain/shortcut/driver/: __init__.py
src/lark_oapi_compact/remaintain/shortcut/message/: __init__.py
src/lark_oapi_compact/remaintain/shortcut/sheets/: __init__.py
src/lark_oapi_compact/shortcut/compact/: __init__.py
src/lark_oapi_compact/shortcut/driver/: __init__.py
src/lark_oapi_compact/shortcut/group_robot/: __init__.py
src/lark_oapi_compact/shortcut/message/: __init__.py
src/lark_oapi_compact/shortcut/sheets/: __init__.py  utils.py
src/lark_oapi_compact/shortcut/sheets/models/: __init__.py  cell_value_support_data_types.py
src/lark_oapi_compact/shortcut/utils/: __init__.py
tests/: conftest.py  test_driver.py  test_group_robot.py  test_message.py  test_pydantic_compat.py  test_sheets.py  test_utils.py
