[project]
name = "lark-oapi-compact"
version = "1.0.0-dev"
description = "Lark OpenAPI SDK for Python"
authors = [{ name = "L8ng", email = "straydragonl@foxmail.com" }]
dependencies = [
    "attrs>=23.2.0",
    "pycryptodome>=3.20.0",
    "requests>=2.31.0",
    "pydantic>=1.10.14, <2",
    "typing_extensions",
    "lark-oapi>=1.2.1",
    "typing-extensions>=4.7.1",
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.4",
    "ipython>=7.34.0",
    "ruff>=0.2.2",
    "pre-commit>=2.21.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lark_oapi_compact"]

[tool.hatch.build.targets.sdist]
packages = ["src/lark_oapi_compact"]
