[project]
name = "lark-oapi-compact"
version = "0.1.3"
description = "Lark OpenAPI SDK for Python"
authors = [{ name = "L8ng", email = "straydragonl@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = [
  "feishu",
  "lark",
]
# https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Upstream/v2_main https://github.com/larksuite/oapi-sdk-python
    "lark-oapi==1.4.24",
    # ---
    "pydantic>=2.12.0",
    # Upstream/main old sdkhttps://github.com/larksuite/oapi-sdk-python
    "attrs>=25.4.0",
    "pycryptodome>=3.23.0",
    "requests>=2.32.5",
    "typing_extensions>=4.15.0",
]

[project.urls]
Repository = "https://github.com/StrayDragon/oapi-sdk-python-compact"
Documentation = "https://github.com/StrayDragon/oapi-sdk-python-compact/blob/main/README.md"
Changelog = "https://github.com/StrayDragon/oapi-sdk-python-compact/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.37.0",
    "pre-commit>=4.5.0",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
fix = true

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "src/lark_oapi_compact/remaintain/extra",
]

target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pyupgrade subset
    "UP",
]
ignore = []
per-file-ignores = {}

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
