[project]
name = "lark-oapi-compact"
version = "0.1.3"
description = "Lark OpenAPI SDK for Python"
authors = [{ name = "L8ng", email = "straydragonl@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = [
  "feishu",
  "lark",
]
# https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Upstream/v2_main https://github.com/larksuite/oapi-sdk-python
    # Keep latest for API compatibility
    "lark-oapi>=1.4.24",
    # ---
    # Pydantic compatibility - supports both v1 and v2
    # v1 for Python 3.8 compatibility, v2 for Python 3.9+, we use pydantic_compact to handle it
    "pydantic>=1.10.14,<3.0",
    # Upstream/main old sdk https://github.com/larksuite/oapi-sdk-python
    "attrs>=22.2.0",
    "pycryptodome>=3.21.0",
    "requests>=2.32.0",
    "typing_extensions>=4.12.0",
]

[project.urls]
Repository = "https://github.com/StrayDragon/oapi-sdk-python-compact"
Documentation = "https://github.com/StrayDragon/oapi-sdk-python-compact/blob/main/README.md"
Changelog = "https://github.com/StrayDragon/oapi-sdk-python-compact/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.36.1",
    "ipython>=8.12.0",
    "pre-commit>=3.5.0",
    "pytest-cov>=4.1.0",
    "pytest>=8.0.0",
    "ruff>=0.1.15",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
fix = true

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "src/lark_oapi_compact/remaintain/extra",
]

target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pyupgrade subset (excluding version-specific suggestions)
    "UP",
]
ignore = [
    # Keep Optional[...] for Python 3.8 compatibility
    "UP045",
    # Keep List, Dict, Tuple for Python 3.8 compatibility
    "UP006",
    # Ignore unused imports in compact module for dynamic conditional imports
    "F401",
]
per-file-ignores = {}

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.basedpyright]
# Python version to target
pythonVersion = "3.7"

# Use standard type checking mode
typeCheckingMode = "standard"

# Ignore certain warnings for compatibility
ignore = [
    # Allow unused variables when underscore-prefixed
    "reportUnusedVariable",
    # Allow missing type annotations in some cases for backward compatibility
    "reportUnannotatedClassAttribute",
    # Ignore some import issues in complex cases
    "reportUnknownVariableType",
    "reportUnknownParameterType",
    "reportUnknownArgumentType",
    "reportUnknownVariableType",
    # Python 3.8 compatibility issues with type expressions
    "reportInvalidTypeForm",
]

# Exclude certain paths
exclude = [
    "src/lark_oapi_compact/remaintain/**",
    "**/node_modules/**",
    "**/__pycache__/**",
]
